<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Time Line</string>
    <string name="user_profile_pic">User profile pic</string>
    <string name="signout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="compose">Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="compose_hint">Enter tweet</string>
    <string name="send_tweet">Tweet</string>
    <string name="cancel_tweet">Cancel</string>
    <string name="failed_to_tweet">Tweet Failed</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="firstname">First Name</string>
    <string name="status">Status</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>