<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

	<ImageView
    	android:id="@+id/iv_profile_pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_profile_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/iv_profile_pic"
        android:text="@string/firstname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_profile_firstname"
        android:layout_below="@+id/tv_profile_firstname"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_profile_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iv_profile_pic"
        android:text="@string/followers"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_profile_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_profile_followers"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/tv_profile_followers"
        android:text="@string/following"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <fragment
        android:id="@+id/usrTimeline"
        android:name="com.twitter.fragments.UserTimeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_profile_following"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        tools:layout="@layout/fragment_tweets_list" />

</RelativeLayout>
