<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeTweetActivity" >
    
    <ImageView
        android:id="@+id/ivUserPic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/user_profile_pic" />
    
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivUserPic"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@id/ivUserPic" />
    
    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvName"
        android:layout_marginLeft="10dp"
        android:layout_alignBaseline="@id/ivUserPic" />
    
    <EditText 
        android:id="@+id/etComposeTweet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/ivUserPic"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:hint="@string/compose_hint" />
    
    <TextView 
        android:id="@+id/tvCharacterLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etComposeTweet"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
    />
    
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCharacterLimit"
        android:layout_alignParentLeft="true"
        android:text="@string/cancel_tweet"
        android:onClick="handleTweet" />
    
    <Button 
        android:id="@+id/btnSendTweet" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnCancel"
        android:layout_toRightOf="@id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:text="@string/send_tweet"
        android:onClick="handleTweet" />


</RelativeLayout>
